--- a/server/public/success.html
+++ b/server/public/success.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Thanks for your order!</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <section>
-      <p>
-        We appreciate your business! If you have any questions, please email
-        <a href="mailto:code.with.sloba@gmail.com">code.with.sloba@gmail.com</a
+        <p>
+            We appreciate your business! If you have any questions, please email
+            <a href="mailto:chimsovann20@kit.edu.kh">chimsovann20@kit.edu.kh</a
         >.
       </p>
     </section>
