--- a/server/public/success.html
+++ b/server/public/success.html
@@ -10,8 +10,7 @@
     <section>
         <p>
             We appreciate your business! If you have any questions, please email
-            <a href="mailto:chimsovann20@kit.edu.kh">chimsovann20@kit.edu.kh</a
-        >.
+            <a href="mailto:chimsovann20@kit.edu.kh">chimsovann20@kit.edu.kh</a>.
       </p>
     </section>
   </body>
